fix icons, fix jumpto for phones

--- a/assets/src/scss/components/_suppCont.scss
+++ b/assets/src/scss/components/_suppCont.scss
@@ -104,6 +104,9 @@ $suppContArrowWidth : 10px;
   }
   @include media-breakpoint-down(xs){
     display: none;
+    &.suppCont-expand--type {
+      display: block;
+    }
   }
 }
 
